tutorial de const

--- a/1_let.html
+++ b/1_let.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>EcmaScript 6</title>
-	<script src="myScript.js" type="text/javascript" charset="utf-8" async defer></script>
+	<script src="1_let.js" type="text/javascript" charset="utf-8" async defer></script>
 </head>
 <body>
 	
