finalizando let and const

--- a/1_let.html
+++ b/1_let.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>EcmaScript 6</title>
+	<title>Let</title>
 	<script src="1_let.js" type="text/javascript" charset="utf-8" async defer></script>
 </head>
 <body>
