default parameters values

--- a/1_let.html
+++ b/1_let.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<title>Let</title>
 	<script src="1_let.js" type="text/javascript" charset="utf-8" async defer></script>
 </head>
+
+<script src='http://localhost:35729/livereload.js'></script>
+
 <body>
-	
+
 
 
 </body>
+
 </html>
