--- a/2_const.html
+++ b/2_const.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<title>const</title>
 	<script src="2_const.js" type="text/javascript" charset="utf-8" async defer></script>
 </head>
+
 <body>
-	
+	<script type="text/javascript" src="http://localhost:35729/livereload.js">
+	</script>
 </body>
+
 </html>
