--- a/7_Arrow_Functions.html
+++ b/7_Arrow_Functions.html
@@ -138,7 +138,7 @@
 </head>
 
 <body>
-     <script src="http://localhost:35729/livereload.js"></script>
+     <!-- <script src="http://localhost:35729/livereload.js"></script> -->
 </body>
 
 </html>
