--- a/1_let.html
+++ b/1_let.html
@@ -7,7 +7,7 @@
 	<script src="1_let.js" type="text/javascript" charset="utf-8" async defer></script>
 </head>
 
-<script src='http://localhost:35729/livereload.js'></script>
+<!-- <script src='http://localhost:35729/livereload.js'></script> -->
 
 <body>
 
