--- a/2_const.html
+++ b/2_const.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-	<script type="text/javascript" src="http://localhost:35729/livereload.js">
+	<!-- <script type="text/javascript" src="http://localhost:35729/livereload.js"> -->
 	</script>
 </body>
 
