--- a/4_Array_find()_Method.html
+++ b/4_Array_find()_Method.html
@@ -2,14 +2,14 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>4_Array_find()_Method</title>
+     <meta charset="UTF-8">
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+     <title>4_Array_find()_Method</title>
 </head>
 
 <script src='4_Array_find()_Method.js'></script>
-<script src='http://localhost:35729/livereload.js'></script>
+<!-- <script src='http://localhost:35729/livereload.js'></script> -->
 
 
 <body>
