--- a/6_New_Number_Methods.html
+++ b/6_New_Number_Methods.html
@@ -28,7 +28,7 @@
 </head>
 
 <body>
-     <script src="http://localhost:35729/livereload.js"></script>
+     <!-- <script src="http://localhost:35729/livereload.js"></script> -->
 </body>
 
 </html>
